--- a/fetch_navigation/config/fetch/costmap_common.yaml
+++ b/fetch_navigation/config/fetch/costmap_common.yaml
@@ -11,4 +11,5 @@ obstacles:
     max_obstacle_height: 0.3
   z_voxels: 16
   z_resolution: 0.125
+  min_obstacle_height: 0.25
   max_obstacle_height: 2.0
